# quirc-android

./: .gitignore  CMakeLists.txt  README.md  build.gradle  settings.gradle
quirc/lib/: identify.c  quirc.c  quirc.h
src/main/cpp/: quirc_jni.cpp
src/main/java/com/example/quirc/: QuircNative.java
src/tests/: CMakeLists.txt  test.cpp
